--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: SGAS
 email: sgas-dev-list@mail.cs.umu.se
 description: > # this means to ignore newlines until "baseurl:"
   This is still very experimental. Please see http://www.sgas.se for the official SGAS page.
-baseurl: "/sgas" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sgas.github.io" # the base hostname & protocol for your site
 github_username:  sgas
 
